--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         // 指定生成哪个模块系统代码
         "module": "commonjs",
         // 指定ECMAScript目标版本
-        "target": "es5", 
+        "target": "esnext", 
         // 在 .tsx文件里支持JSX
         "jsx": "react",
         // 解析非相对模块名的基准目录
