--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime-corejs2": "^7.4.5",
     "@types/react": "^16.8.21",
     "@types/react-dom": "^16.8.4",
     "awesome-typescript-loader": "^5.2.1",
