--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@babel/runtime-corejs2": "^7.4.5",
     "@types/react": "^16.8.21",
     "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.1.0",
     "@types/react-router-dom": "^4.3.4",
+    "@types/redux-actions": "^2.6.1",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
@@ -33,8 +35,15 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "connected-react-router": "^6.4.0",
+    "immer": "^3.1.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1"
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.5",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   }
 }
