--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-redux": "^7.1.0",
     "@types/react-router-dom": "^4.3.4",
     "@types/redux-actions": "^2.6.1",
+    "@types/redux-logger": "^3.0.7",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
@@ -43,7 +44,7 @@
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   }
 }
