--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime-corejs2": "^7.4.5",
+    "@types/mockjs": "^1.0.2",
     "@types/react": "^16.8.21",
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.1.0",
@@ -27,6 +28,7 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "mockjs": "^1.0.1-beta3",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.5.2",
     "uglifyjs-webpack-plugin": "^2.1.3",
