--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "bdev": "webpack --config webpack.dev.js",
-    "dev": "webpack-dev-server --open --config webpack.dev.js"
+    "dev": "webpack-dev-server --open --config webpack.dev.js",
+    "mock": "node ./src/mock/mockServer.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
@@ -27,6 +29,7 @@
     "@types/redux-logger": "^3.0.7",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
     "mockjs": "^1.0.1-beta3",
     "source-map-loader": "^0.2.4",
@@ -38,6 +41,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "connected-react-router": "^6.4.0",
     "immer": "^3.1.3",
     "react": "^16.8.6",
