--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.1.3",
     "axios": "^0.19.0",
     "connected-react-router": "^6.4.0",
     "immer": "^3.1.3",
