--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "connected-react-router": "^6.4.0",
+    "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0",
+    "react-redux": "6.0.1",
+    "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
