--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime-corejs2": "^7.4.5",
+    "@stinkstudios/eslint-config-react-app": "1.3.2",
     "@types/mockjs": "^1.0.2",
     "@types/react": "^16.8.21",
     "@types/react-dom": "^16.8.4",
@@ -27,12 +28,23 @@
     "@types/react-router-dom": "^4.3.4",
     "@types/redux-actions": "^2.6.1",
     "@types/redux-logger": "^3.0.7",
+    "@typescript-eslint/eslint-plugin": "1.x",
+    "@typescript-eslint/parser": "1.x",
+    "babel-eslint": "10.x",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "eslint": "5.x",
+    "eslint-config-prettier": "4.x",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-compat": "3.x",
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-jest": "22.x",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-react": "7.x",
+    "eslint-plugin-unicorn": "6.x",
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
     "mockjs": "^1.0.1-beta3",
-    "source-map-loader": "^0.2.4",
     "typescript": "^3.5.2",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.35.0",
