--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --config webpack.prod.js",
     "bdev": "webpack --config webpack.dev.js",
     "dev": "webpack-dev-server --open --config webpack.dev.js",
-    "mock": "node ./src/mock/mockServer.js"
+    "mock": "node ./src/mock/mock-server.js"
   },
   "keywords": [],
   "author": "",
@@ -65,6 +65,7 @@
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.0.5",
     "redux-thunk": "^2.3.0"
   }
 }
