--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "private": true,
   "scripts": {
     "build": "webpack --config webpack.prod.js",
-    "bdev": "webpack --config webpack.dev.js",
+    "build_dev": "webpack --config webpack.dev.js",
     "dev": "webpack-dev-server --open --config webpack.dev.js",
-    "mock": "node ./src/mock/mock-server.js"
+    "mock": "node ./src/mock/mock-server.js",
+    "test": "jest",
+    "test_dev": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +23,9 @@
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime-corejs2": "^7.4.5",
     "@stinkstudios/eslint-config-react-app": "1.3.2",
+    "@types/enzyme": "^3.10.1",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^24.0.15",
     "@types/mockjs": "^1.0.2",
     "@types/react": "^16.8.21",
     "@types/react-dom": "^16.8.4",
@@ -31,8 +36,11 @@
     "@typescript-eslint/eslint-plugin": "1.x",
     "@typescript-eslint/parser": "1.x",
     "babel-eslint": "10.x",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "5.x",
     "eslint-config-prettier": "4.x",
     "eslint-loader": "^2.1.2",
@@ -45,6 +53,7 @@
     "eslint-plugin-unicorn": "6.x",
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.8.0",
     "mockjs": "^1.0.1-beta3",
     "typescript": "^3.5.2",
     "uglifyjs-webpack-plugin": "^2.1.3",
