--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "private": true,
   "scripts": {
-    "build": "webpack --config webpack.prod.js",
-    "build_dev": "webpack --config webpack.dev.js",
+    "bp": "webpack --config webpack.prod.js",
+    "bd": "webpack --config webpack.dev.js",
     "dev": "webpack-dev-server --open --config webpack.dev.js",
     "mock": "node ./src/mock/mock-server.js",
     "test": "jest",
@@ -33,12 +33,14 @@
     "@types/react-router-dom": "^4.3.4",
     "@types/redux-actions": "^2.6.1",
     "@types/redux-logger": "^3.0.7",
+    "@types/styled-components": "^4.1.18",
     "@typescript-eslint/eslint-plugin": "1.x",
     "@typescript-eslint/parser": "1.x",
     "babel-eslint": "10.x",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "5.x",
@@ -52,17 +54,32 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "eslint-plugin-unicorn": "6.x",
     "express": "^4.17.1",
+    "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
+    "mini-css-extract-plugin": "^0.7.0",
     "mockjs": "^1.0.1-beta3",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "pnp-webpack-plugin": "^1.5.0",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-normalize": "^8.0.1",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-safe-parser": "^4.0.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^1.3.0",
     "typescript": "^3.5.2",
     "uglifyjs-webpack-plugin": "^2.1.3",
+    "url-loader": "^2.0.1",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.2",
+    "webpack-manifest-plugin": "^2.0.4",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.2.0",
     "axios": "^0.19.0",
     "connected-react-router": "^6.4.0",
     "history": "^4.9.0",
@@ -75,6 +92,7 @@
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.3.2"
   }
 }
