--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
     "@material-ui/core": "^4.2.0",
     "axios": "^0.19.0",
     "connected-react-router": "^6.4.0",
+    "dotenv": "^8.0.0",
+    "dotenv-expand": "^5.1.0",
     "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
