--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
     "typescript": "^3.5.2",
-    "uglifyjs-webpack-plugin": "^2.1.3",
     "url-loader": "^2.0.1",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.4",
@@ -82,6 +81,8 @@
     "@material-ui/core": "^4.2.0",
     "axios": "^0.19.0",
     "connected-react-router": "^6.4.0",
+    "dotenv": "^8.0.0",
+    "dotenv-expand": "^5.1.0",
     "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
