--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@babel/runtime-corejs2": "^7.4.5",
     "@stinkstudios/eslint-config-react-app": "1.3.2",
     "@types/enzyme": "^3.10.1",
     "@types/enzyme-adapter-react-16": "^1.0.5",
@@ -39,6 +39,7 @@
     "babel-eslint": "10.x",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-macros": "^2.6.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.0.0",
     "enzyme": "^3.10.0",
@@ -77,6 +78,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "@babel/runtime-corejs2": "^7.5.4",
     "@material-ui/core": "^4.2.0",
     "axios": "^0.19.0",
     "connected-react-router": "^6.4.0",
