--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/redux-actions": "^2.6.1",
     "@types/redux-logger": "^3.0.7",
     "@types/styled-components": "^4.1.18",
+    "@types/yup": "^0.26.22",
     "@typescript-eslint/eslint-plugin": "1.x",
     "@typescript-eslint/parser": "1.x",
     "babel-eslint": "10.x",
@@ -85,9 +86,13 @@
     "connected-react-router": "^6.4.0",
     "dotenv": "^8.0.0",
     "dotenv-expand": "^5.1.0",
+    "formik": "^1.5.8",
     "history": "^4.9.0",
+    "http-errors": "^1.7.3",
+    "i18next": "^17.0.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-i18next": "^10.11.4",
     "react-redux": "6.0.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
@@ -96,6 +101,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.5",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "yup": "^0.27.0"
   }
 }
