--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     // 重定向输出目录
     "outDir": "./dist/",
     // 生成相应的 .map文件
     "sourceMap": true,
     // 在表达式和声明上有隐含的 any类型时报错
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     // 指定生成哪个模块系统代码
     "module": "commonjs",
     // 指定ECMAScript目标版本
@@ -15,7 +16,7 @@
     // 解析非相对模块名的基准目录
     "baseUrl": "./",
     // 要包含的类型声明文件路径列表
-    "typeRoots": ["node_modules/@types"]
+    "typeRoots": ["node_modules/@types", "index.d.ts"]
   },
   "include": ["./src/**/*"],
   "exclude": ["./dist/", "node_modules"]
