--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@stinkstudios/eslint-config-react-app": "1.3.2",
+    "@types/classnames": "^2.2.9",
     "@types/enzyme": "^3.10.1",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.15",
@@ -34,6 +35,7 @@
     "@types/redux-actions": "^2.6.1",
     "@types/redux-logger": "^3.0.7",
     "@types/styled-components": "^4.1.18",
+    "@types/yup": "^0.26.22",
     "@typescript-eslint/eslint-plugin": "1.x",
     "@typescript-eslint/parser": "1.x",
     "babel-eslint": "10.x",
@@ -81,21 +83,30 @@
   "dependencies": {
     "@babel/runtime-corejs2": "^7.5.4",
     "@material-ui/core": "^4.2.0",
+    "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "connected-react-router": "^6.4.0",
     "dotenv": "^8.0.0",
     "dotenv-expand": "^5.1.0",
+    "formik": "^1.5.8",
     "history": "^4.9.0",
+    "http-errors": "^1.7.3",
+    "i18next": "^17.0.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-i18next": "^10.11.4",
     "react-redux": "6.0.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.5",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "tinycolor2": "^1.4.1",
+    "yup": "^0.27.0"
   }
 }
