--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,8 @@
     // 解析非相对模块名的基准目录
     "baseUrl": "./",
     // 显示指定要包含的类型声明文件列表
-    "typeRoots": ["node_modules/@types", "index.d.ts"],
+    "typeRoots": ["node_modules/@types", "index.d.ts"]
   },
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "index.d.ts"],
   "exclude": ["./dist/", "node_modules"]
 }
